# Hackathon-Todo

./: .gitignore  CLAUDE.md  event-driven-architect.skill  fastapi-backend-builder.skill  kubernetes-deployer.skill  nextjs-ui-builder.skill  todo-ai-mcp-agent.skill  todo-domain-expert.skill
.specify/memory/: constitution.md
phase-1-console/: README.md  main.py  pyproject.toml
phase-1-console/src/: __init__.py
phase-1-console/src/cli/: __init__.py  handler.py
phase-1-console/src/manager/: __init__.py  todo_manager.py
phase-1-console/src/models/: __init__.py  task.py
phase-2/: README.md
phase-2/backend/: .env.example  .vercelignore  Dockerfile  HUGGINGFACE_DEPLOYMENT.md  README.md  config.py  database.py  init_db.py  main.py  middleware.py  requirements.txt
phase-2/frontend/: next.config.js  next.config.ts  tsconfig.json
phase-3/: QUICKSTART_VALIDATION.md  TASKS_COMPLETION_SUMMARY.md  test-simple.sh
phase-3/backend/: .env.example  Dockerfile  README.md  config.py  debug_server.py  main.py  models.py  pyproject.toml  requirements.txt
phase-3/frontend/: .netlify-trigger  .vercelignore  netlify.toml  next.config.js
phase-4/backend/: .dockerignore  Dockerfile  alembic.ini  config.py  database.py  main.py
phase-4/frontend/: .dockerignore  .eslintrc.json  Dockerfile  next.config.js
phase-4/todo-chatbot/: Chart.yaml  DEPLOYMENT_SUCCESS.txt  minikube-values.yaml  values.yaml
specs/001-console-todo-app/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/001-fullstack-web-todo/: data-model.md  plan.md  quickstart.md  research.md  spec.md  (+1 more)
(+104 files in other folders)
